# hermes-test-platform

./: .gitignore  DATASET_GUIDE.md  EVAL_PLATFORM_PLAN.md  README.md  README.zh-CN.md  pyproject.toml  runner_presets.json
datasets/: database-top-scene-handler-report-quality.yaml  database-top-scene-handler-root-cause-quality.yaml  database-top-scene-handler.yaml  smoke.yaml  tasks.yaml  test.yaml  数据库连接工具.yaml
evalkit/: __init__.py  __main__.py  cli.py  config.py  dataset.py  persist.py  presets.py  report.py  runner.py  service.py  session.py  web.py
evalkit/graders/: __init__.py  base.py  llm_judge.py  timing.py  tool_use.py
evalkit/webui/: app.js  index.html  style.css
