[project]
name = "evalkit"
version = "0.1.0"
description = "CLI-based evaluation harness for Hermes Agent (zero-intrusion)."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "fire>=0.6.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evalkit"]
